2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnmh.el (nnmh-request-expire-articles): Don't try to fetch the expiry
	target here, because we don't know the Gnus name of the group.

	* nndraft.el (nndraft-request-expire-articles): Fetch the expiry target
	for the correct group.

	* gnus-ems.el (gnus-create-image): Ignore all image-creation errors.

	* gnus.el (gnus): Give a final warning after startup.

	* gnus-util.el (gnus-action-message-log): New variable.
	(gnus-message): Use it.
	(gnus-final-warning): New function.

	* nnimap.el (nnimap-open-connection): Record the greeting.
	(nnimap): Add greeting.

2010-09-26  Julien Danjou  <julien@danjou.info>

	* gnus-html.el (gnus-html-show-images): Fix gnus-html-display-image
	arguments.
	(gnus-html-wash-images): Fix spec computing to include start/end.

	* gnus-art.el (gnus-article-treat-body-boundary): Fix length computing.

2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-expire-articles): Compress ranges before
	deletion.
	(nnimap-retrieve-headers): Don't select the group, because that's
	already done by nnimap-possibly-change-group.

	* gnus-picon.el (gnus-picon-inhibit-top-level-domains): New variable.
	(gnus-picon-transform-address): Use it.

	* mail-source.el (mail-source-value): Revert previous patch.

	* nnimap.el (nnimap-credentials): Allow inhibiting the password query
	on failure.
	(nnimap-open-connection): Look up both virtual and physical server name
	credentials.

	* gnus-win.el: Revert previous patch, since it made Gnus backtrace.

2009-02-07  Dave Love  <fx@gnu.org>

	* tls.el (open-tls-stream): Don't query killing process.

2009-02-08  Dave Love  <fx@gnu.org>

	* gnus-win.el (gnus-window-to-buffer-helper,
	gnus-all-windows-visible-p): Function needn't be a symbol.

	* mail-source.el (mail-source-value): Function needn't be a symbol.

2010-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-cite-prefix-regexp): Remove } from the cite